# psnr-ssim

./: .gitignore  README.md  collector.ts  comparator.ts  docker-compose.yml  package-lock.json  package.json  types.ts
client/: package.json
client/src/: App.tsx  index.css  types.ts
comparator/: .env.example  .gitignore  README.md  install.sh  package-lock.json  package.json
comparator/cpp/: CMakeLists.txt  main.cpp  metrics.cpp  metrics.h
comparator/src/: comparator.ts  index.ts  parser.ts  types.ts
cpp/: CMakeLists.txt
dataservice/: .env.example  Dockerfile  README.md  install.sh  ormconfig.json  package-lock.json  package.json
dataservice/src/: VideoRepository.ts  dbManager.ts  index.ts  types.ts
dataservice/src/entity/: Video.ts
dataservice/src/migration/: 1623159509287-add-video-table.ts  1623164194856-change-videos-metrics-types.ts  1623164451469-change-videos-dates.ts  1623166700611-add-codec-to-video.ts  1624086386761-add-resolution-to-video.ts  1624087442171-remove-nullable-of-fields.ts
gateaway/: .env.example  package-lock.json  package.json
gateaway/src/: index.ts  proxy.ts  rabbitmq.ts
watcher/: .env.example  .gitignore  README.md  package-lock.json  package.json
watcher/src/: FilesCollection.ts  const.ts  fs.ts  http.ts  index.ts
web/: .env.example  README.md  package-lock.json  package.json
web/src/: const.ts  generator.ts  index.ts  rabbitmq.ts  types.ts
