cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
set(SOURCES metrics.cpp)
set(HEADERS metrics.h)
add_library(metrics ${SOURCES} ${HEADERS})
target_include_directories(metrics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(main main.cpp)
target_link_libraries(main metrics)
target_link_libraries(main ${OpenCV_LIBS})
